# sensor-analysis

./: .gitignore  README.md  main.py  pyproject.toml
data/: baseline2_CO2_data_2026-05-22_2259.csv  baseline2_CO2_data_2026-05-23_1714.csv  baseline2_CO2_data_2026-05-24_1157.csv  baseline_2026-05-20+_notes.md  baseline_CO2_data_2026-05-22_1533.csv  baseline_CO2_data_2026-05-22_2259.csv
